Update Exploratory Data Analysis.ipynb

--- a/Projects/Supermaket Sales Data/code/Exploratory Data Analysis.ipynb
+++ b/Projects/Supermaket Sales Data/code/Exploratory Data Analysis.ipynb
@@ -1,33 +1,78 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import os\n",
-    "import pandas as pd"
+    "# 1. Import Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\G2\\\\Documents\\\\GitHub\\\\Data-Science-Portfolio\\\\Projects\\\\Supermaket Sales Data\\\\data'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.getcwd()"
+    "import os\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "from io import StringIO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Load data\n",
+    "\n",
+    "* Define all files url\n",
+    "* Write function to read csv from Github url\n",
+    "* Save to DataFrame\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annex1 = 'https://raw.githubusercontent.com/prattapong/Data-Science-Portfolio/main/Projects/Supermaket%20Sales%20Data/data/annex1.csv'\n",
+    "annex2 = 'https://raw.githubusercontent.com/prattapong/Data-Science-Portfolio/main/Projects/Supermaket%20Sales%20Data/data/annex2.csv'\n",
+    "annex3 = 'https://raw.githubusercontent.com/prattapong/Data-Science-Portfolio/main/Projects/Supermaket%20Sales%20Data/data/annex3.csv'\n",
+    "annex4 = 'https://raw.githubusercontent.com/prattapong/Data-Science-Portfolio/main/Projects/Supermaket%20Sales%20Data/data/annex4.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_df_from_url(url):\n",
+    "    response = requests.get(url)\n",
+    "\n",
+    "    # Check if the request was successful (status code 200)\n",
+    "    if response.status_code == 200:\n",
+    "        # Create a file-like object from the raw content\n",
+    "        csv_content = StringIO(response.text)\n",
+    "\n",
+    "        # Read the CSV file into a DataFrame\n",
+    "        df = pd.read_csv(csv_content)\n",
+    "\n",
+    "        # Return DataFrame\n",
+    "        return df\n",
+    "    else:\n",
+    "        print(f\"Failed to fetch data. Status code: {response.status_code}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_item = get_df_from_url(annex1)\n",
+    "df_transaction = get_df_from_url(annex2)"
    ]
   },
   {
