--- a/Projects/Supermaket Sales Data/code/Exploratory Data Analysis.ipynb
+++ b/Projects/Supermaket Sales Data/code/Exploratory Data Analysis.ipynb
@@ -35,7 +35,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "{     \"tags\": [         \"hide-input\",     ] }"
+    ]
+   },
    "outputs": [],
    "source": [
     "annex1 = 'https://raw.githubusercontent.com/prattapong/Data-Science-Portfolio/main/Projects/Supermaket%20Sales%20Data/data/annex1.csv'\n",
