--- a/Projects/Supermaket Sales Data/code/Exploratory Data Analysis.ipynb
+++ b/Projects/Supermaket Sales Data/code/Exploratory Data Analysis.ipynb
@@ -36,9 +36,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "tags": [
-     "{     \"tags\": [         \"hide-input\",     ] }"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
