--- a/Projects/Supermaket Sales Data/code/1.1 XGBoost Baseline.ipynb
+++ b/Projects/Supermaket Sales Data/code/1.1 XGBoost Baseline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "4  2020-07-01     1011010101  102900005115823  114.760"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,14 +438,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\tvalidation_0-rmse:111.00837\tvalidation_1-rmse:91.02361\n",
+      "[0]\tvalidation_0-rmse:111.00837\tvalidation_1-rmse:91.02361\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[100]\tvalidation_0-rmse:106.99838\tvalidation_1-rmse:88.45494\n",
       "[200]\tvalidation_0-rmse:103.35387\tvalidation_1-rmse:86.21474\n",
       "[300]\tvalidation_0-rmse:100.02121\tvalidation_1-rmse:84.36822\n",
@@ -462,7 +468,7 @@
       "[1400]\tvalidation_0-rmse:78.44001\tvalidation_1-rmse:76.64362\n",
       "[1500]\tvalidation_0-rmse:77.17844\tvalidation_1-rmse:76.64260\n",
       "[1600]\tvalidation_0-rmse:76.04744\tvalidation_1-rmse:76.73888\n",
-      "[1635]\tvalidation_0-rmse:75.66981\tvalidation_1-rmse:76.78254\n"
+      "[1636]\tvalidation_0-rmse:75.65911\tvalidation_1-rmse:76.78577\n"
      ]
     },
     {
@@ -472,7 +478,7 @@
        "             colsample_bylevel=None, colsample_bynode=None,\n",
        "             colsample_bytree=None, device=None, early_stopping_rounds=200,\n",
        "             enable_categorical=True, eval_metric=None,\n",
-       "             eval_metrics=&lt;function mean_squared_error at 0x000002CBF8A90860&gt;,\n",
+       "             eval_metrics=&lt;function mean_squared_error at 0x000001C50F2CBF60&gt;,\n",
        "             feature_types=None, gamma=None, grow_policy=None,\n",
        "             importance_type=None, interaction_constraints=None,\n",
        "             learning_rate=0.0007, max_bin=None, max_cat_threshold=None,\n",
@@ -483,7 +489,7 @@
        "             colsample_bylevel=None, colsample_bynode=None,\n",
        "             colsample_bytree=None, device=None, early_stopping_rounds=200,\n",
        "             enable_categorical=True, eval_metric=None,\n",
-       "             eval_metrics=&lt;function mean_squared_error at 0x000002CBF8A90860&gt;,\n",
+       "             eval_metrics=&lt;function mean_squared_error at 0x000001C50F2CBF60&gt;,\n",
        "             feature_types=None, gamma=None, grow_policy=None,\n",
        "             importance_type=None, interaction_constraints=None,\n",
        "             learning_rate=0.0007, max_bin=None, max_cat_threshold=None,\n",
@@ -497,7 +503,7 @@
        "             colsample_bylevel=None, colsample_bynode=None,\n",
        "             colsample_bytree=None, device=None, early_stopping_rounds=200,\n",
        "             enable_categorical=True, eval_metric=None,\n",
-       "             eval_metrics=<function mean_squared_error at 0x000002CBF8A90860>,\n",
+       "             eval_metrics=<function mean_squared_error at 0x000001C50F2CBF60>,\n",
        "             feature_types=None, gamma=None, grow_policy=None,\n",
        "             importance_type=None, interaction_constraints=None,\n",
        "             learning_rate=0.0007, max_bin=None, max_cat_threshold=None,\n",
@@ -507,7 +513,7 @@
        "             n_jobs=None, num_parallel_tree=None, ...)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,9 +540,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([55.208763, 58.29615 , 55.38967 , ..., 65.44664 , 75.8967  ,\n",
+       "       45.589233], dtype=float32)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Predict for train and test\n",
     "y_train_pred = xgb_reg.predict(X_train)\n",
@@ -546,12 +564,12 @@
     "train_rmse = np.sqrt(mean_squared_error(y_true = y_train,\n",
     "                                      y_pred = y_train_pred))\n",
     "test_rmse = np.sqrt(mean_squared_error(y_true = y_test,\n",
-    "                                       y_pred = y_pred))\n"
+    "                                       y_pred = y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +703,7 @@
        "4          3          47        4   37.248474 2022-11-24  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
