--- a/Projects/Supermaket Sales Data/code/1.1 XGBoost Baseline.ipynb
+++ b/Projects/Supermaket Sales Data/code/1.1 XGBoost Baseline.ipynb
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,8 @@
      "output_type": "stream",
      "text": [
       "RMSE for Train: 77.98\n",
-      "RMSE for Test: 76.63\n"
+      "RMSE for Test: 76.63\n",
+      "RMSE: 312.64\n"
      ]
     },
     {
@@ -752,6 +753,12 @@
     "print(f'RMSE for Train: {train_rmse:.2f}')\n",
     "print(f'RMSE for Test: {test_rmse:.2f}')\n",
     "\n",
+    "# Since our purpose is to predict Time-series on Sales for each category, we measure RMSE in Category data point\n",
+    "df_predict_agg = df_predict.groupby(['Date','Category Code'], as_index = False)[['Sales','prediction']].sum()\n",
+    "rmse = np.sqrt(mean_squared_error(y_true = df_predict_agg['Sales'],\n",
+    "                                  y_pred = df_predict_agg['prediction']))\n",
+    "print(f'RMSE: {rmse:.2f}')\n",
+    "\n",
     "# Plot trend true label vs. prediction\n",
     "plt.figure(figsize = (10,5))\n",
     "sns.lineplot(data = df_predict.groupby('Date')['Sales'].sum(), label = 'True label')\n",
@@ -761,24 +768,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE: 312.64\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Category Code</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>prediction</th>\n",
+       "      <th>Abs Error</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>322</th>\n",
+       "      <td>2023-01-20</td>\n",
+       "      <td>1011010504</td>\n",
+       "      <td>6036.382812</td>\n",
+       "      <td>959.814331</td>\n",
+       "      <td>5076.568359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>316</th>\n",
+       "      <td>2023-01-19</td>\n",
+       "      <td>1011010504</td>\n",
+       "      <td>4398.406250</td>\n",
+       "      <td>1019.262268</td>\n",
+       "      <td>3379.144043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>318</th>\n",
+       "      <td>2023-01-20</td>\n",
+       "      <td>1011010101</td>\n",
+       "      <td>3911.250000</td>\n",
+       "      <td>930.756165</td>\n",
+       "      <td>2980.493896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>323</th>\n",
+       "      <td>2023-01-20</td>\n",
+       "      <td>1011010801</td>\n",
+       "      <td>3731.937500</td>\n",
+       "      <td>822.482483</td>\n",
+       "      <td>2909.455078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>317</th>\n",
+       "      <td>2023-01-19</td>\n",
+       "      <td>1011010801</td>\n",
+       "      <td>3173.509766</td>\n",
+       "      <td>817.638306</td>\n",
+       "      <td>2355.871582</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date Category Code        Sales   prediction    Abs Error\n",
+       "322 2023-01-20    1011010504  6036.382812   959.814331  5076.568359\n",
+       "316 2023-01-19    1011010504  4398.406250  1019.262268  3379.144043\n",
+       "318 2023-01-20    1011010101  3911.250000   930.756165  2980.493896\n",
+       "323 2023-01-20    1011010801  3731.937500   822.482483  2909.455078\n",
+       "317 2023-01-19    1011010801  3173.509766   817.638306  2355.871582"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Since our purpose is to predict Time-series on Sales for each category, we measure RMSE in Category data point\n",
-    "df_predict_agg = df_predict.groupby(['Date','Category Code'], as_index = False)[['Sales','prediction']].sum()\n",
-    "rmse = np.sqrt(mean_squared_error(y_true = df_predict_agg['Sales'],\n",
-    "                                  y_pred = df_predict_agg['prediction']))\n",
-    "print(f'RMSE: {rmse:.2f}')"
+    "df_predict_agg['Abs Error'] = abs(df_predict_agg['Sales'] - df_predict_agg['prediction'])\n",
+    "df_predict_agg.sort_values(by = 'Abs Error', ascending = False).head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
