update new year

--- a/Projects/Supermaket Sales Data/code/1.2 XGBoost Feature Engineering and Training over Category.ipynb
+++ b/Projects/Supermaket Sales Data/code/1.2 XGBoost Feature Engineering and Training over Category.ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -292,6 +292,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Year</th>\n",
        "      <th>Chinese New Year Date</th>\n",
        "      <th>Last Chinese New Year Date</th>\n",
        "      <th>Date Diff</th>\n",
@@ -300,18 +301,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2021</td>\n",
        "      <td>2021-02-12</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2022</td>\n",
        "      <td>2022-02-01</td>\n",
        "      <td>2021-02-12</td>\n",
        "      <td>354 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2023</td>\n",
        "      <td>2023-01-22</td>\n",
        "      <td>2022-02-01</td>\n",
        "      <td>355 days</td>\n",
@@ -321,10 +325,10 @@
        "</div>"
       ],
       "text/plain": [
-       "  Chinese New Year Date Last Chinese New Year Date Date Diff\n",
-       "0            2021-02-12                        NaT       NaT\n",
-       "1            2022-02-01                 2021-02-12  354 days\n",
-       "2            2023-01-22                 2022-02-01  355 days"
+       "   Year Chinese New Year Date Last Chinese New Year Date Date Diff\n",
+       "0  2021            2021-02-12                        NaT       NaT\n",
+       "1  2022            2022-02-01                 2021-02-12  354 days\n",
+       "2  2023            2023-01-22                 2022-02-01  355 days"
       ]
      },
      "metadata": {},
@@ -339,7 +343,7 @@
     "        lunar_date = LunarDate(year, 1, 1)\n",
     "        cny_date = pd.Timestamp(lunar_date.toSolarDate())\n",
     "\n",
-    "        chinese_new_year_dates.append({'Chinese New Year Date': cny_date})\n",
+    "        chinese_new_year_dates.append({'Year': year, 'Chinese New Year Date': cny_date})\n",
     "\n",
     "    chinese_new_year_df = pd.DataFrame(chinese_new_year_dates)\n",
     "    chinese_new_year_df['Last Chinese New Year Date'] = chinese_new_year_df['Chinese New Year Date'].shift(1)\n",
