--- a/Projects/Supermaket Sales Data/code/1.2 XGBoost Feature Engineering and Training over Category.ipynb
+++ b/Projects/Supermaket Sales Data/code/1.2 XGBoost Feature Engineering and Training over Category.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -320,43 +320,138 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Year</th>\n",
        "      <th>Chinese New Year Date</th>\n",
        "      <th>Last Chinese New Year Date</th>\n",
-       "      <th>Date Diff</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>2021-02-12</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>2022-02-01</td>\n",
        "      <td>2021-02-12</td>\n",
-       "      <td>354 days</td>\n",
+       "      <td>2020-01-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2023</td>\n",
+       "      <td>2022-02-01</td>\n",
+       "      <td>2021-02-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>2023-01-22</td>\n",
        "      <td>2022-02-01</td>\n",
-       "      <td>355 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-02-10</td>\n",
+       "      <td>2023-01-22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Year Chinese New Year Date Last Chinese New Year Date Date Diff\n",
-       "0  2021            2021-02-12                        NaT       NaT\n",
-       "1  2022            2022-02-01                 2021-02-12  354 days\n",
-       "2  2023            2023-01-22                 2022-02-01  355 days"
+       "  Chinese New Year Date Last Chinese New Year Date\n",
+       "1            2021-02-12                 2020-01-25\n",
+       "2            2022-02-01                 2021-02-12\n",
+       "3            2023-01-22                 2022-02-01\n",
+       "4            2024-02-10                 2023-01-22"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Chinese New Year Date</th>\n",
+       "      <th>Last Chinese New Year Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-02-12</td>\n",
+       "      <td>2020-01-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-02-01</td>\n",
+       "      <td>2021-02-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-01-22</td>\n",
+       "      <td>2022-02-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-02-10</td>\n",
+       "      <td>2023-01-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-02-05</td>\n",
+       "      <td>2020-01-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2021-02-06</td>\n",
+       "      <td>2020-01-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2021-02-07</td>\n",
+       "      <td>2020-01-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2021-02-08</td>\n",
+       "      <td>2020-01-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2021-02-09</td>\n",
+       "      <td>2020-01-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2021-02-10</td>\n",
+       "      <td>2020-01-23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Chinese New Year Date Last Chinese New Year Date\n",
+       "0            2021-02-12                 2020-01-25\n",
+       "1            2022-02-01                 2021-02-12\n",
+       "2            2023-01-22                 2022-02-01\n",
+       "3            2024-02-10                 2023-01-22\n",
+       "4            2021-02-05                 2020-01-18\n",
+       "5            2021-02-06                 2020-01-19\n",
+       "6            2021-02-07                 2020-01-20\n",
+       "7            2021-02-08                 2020-01-21\n",
+       "8            2021-02-09                 2020-01-22\n",
+       "9            2021-02-10                 2020-01-23"
       ]
      },
      "metadata": {},
@@ -371,30 +466,33 @@
     "        lunar_date = LunarDate(year, 1, 1)\n",
     "        cny_date = pd.Timestamp(lunar_date.toSolarDate())\n",
     "\n",
-    "        chinese_new_year_dates.append({'Year': year, 'Chinese New Year Date': cny_date})\n",
+    "        chinese_new_year_dates.append({'Chinese New Year Date': cny_date})\n",
     "\n",
     "    chinese_new_year_df = pd.DataFrame(chinese_new_year_dates)\n",
     "    chinese_new_year_df['Last Chinese New Year Date'] = chinese_new_year_df['Chinese New Year Date'].shift(1)\n",
-    "    chinese_new_year_df['Date Diff'] = chinese_new_year_df['Chinese New Year Date'] - chinese_new_year_df['Last Chinese New Year Date']\n",
+    "    chinese_new_year_df.dropna(subset=['Last Chinese New Year Date'], inplace = True)\n",
     "    \n",
     "    return chinese_new_year_df\n",
     "\n",
     "def get_chinese_new_year_period(df, days):\n",
     "    days = 7\n",
-    "    new_years = df['Chinese New Year Date'].unique()\n",
-    "    for new_year in new_years:\n",
+    "    # new_years = df['Chinese New Year Date'].unique()\n",
+    "    # for new_year in new_years:\n",
+    "    new_year_dict = dict(zip(df['Chinese New Year Date'], df['Last Chinese New Year Date']))\n",
+    "    for this_year, last_year in new_year_dict.items():\n",
     "        for day in range(-days, days + 1):\n",
     "            if day != 0:\n",
-    "                df = pd.concat([df, pd.DataFrame({'Chinese New Year Date': [new_year + timedelta(days = day)]})],\n",
+    "                df = pd.concat([df, pd.DataFrame({'Chinese New Year Date': [this_year + timedelta(days = day)],\n",
+    "                                                  'Last Chinese New Year Date': [last_year + timedelta(days = day)]})],\n",
     "                               axis = 0,\n",
     "                               ignore_index = True)\n",
     "    return df\n",
     "\n",
-    "df_chinese_new_year = get_chinese_new_year_dates(2021, 2023)\n",
+    "df_chinese_new_year = get_chinese_new_year_dates(2020, 2024)\n",
     "df_chinese_new_year_period = get_chinese_new_year_period(df = df_chinese_new_year, days = 7)\n",
     "\n",
     "display(df_chinese_new_year)\n",
-    "# display(df_chinese_new_year_period)\n"
+    "display(df_chinese_new_year_period.head(10))"
    ]
   },
   {
