--- a/Projects/Supermaket Sales Data/code/1.2 XGBoost Feature Engineering and Training over Category.ipynb
+++ b/Projects/Supermaket Sales Data/code/1.2 XGBoost Feature Engineering and Training over Category.ipynb
@@ -9,24 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting lunardate\n",
-      "  Downloading lunardate-0.2.2-py3-none-any.whl.metadata (3.6 kB)\n",
-      "Downloading lunardate-0.2.2-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: lunardate\n",
-      "Successfully installed lunardate-0.2.2\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -67,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +206,7 @@
        "4  2020-07-01     1011010101  102900005115823  114.760"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,70 +281,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Chinese New Year Date</th>\n",
-       "      <th>Last Chinese New Year Date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2021-02-12</td>\n",
-       "      <td>2020-01-25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-02-01</td>\n",
-       "      <td>2021-02-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-01-22</td>\n",
-       "      <td>2022-02-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2024-02-10</td>\n",
-       "      <td>2023-01-22</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Chinese New Year Date Last Chinese New Year Date\n",
-       "1            2021-02-12                 2020-01-25\n",
-       "2            2022-02-01                 2021-02-12\n",
-       "3            2023-01-22                 2022-02-01\n",
-       "4            2024-02-10                 2023-01-22"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -488,11 +412,60 @@
     "                               ignore_index = True)\n",
     "    return df\n",
     "\n",
+    "def create_last_new_year_feature(df: pd.DataFrame,\n",
+    "                                 df_newyear: pd.DataFrame,\n",
+    "                                 days_before_after: int):\n",
+    "    \n",
+    "    # Get start and end year to generate Chinese New Year DataFrame from input data\n",
+    "    start_year = dt.strptime(df['Date'].min(), '%Y-%m-%d').year\n",
+    "    end_year = dt.strptime(df['Date'].max(), '%Y-%m-%d').year\n",
+    "    \n",
+    "    # Cast date column\n",
+    "    df['Date'] = pd.to_datetime(df['Date'])\n",
+    "\n",
+    "    # Merge current new year date with last new year date\n",
+    "    df_last_new_year = df.copy()\n",
+    "    df_last_new_year = df_last_new_year.merge(df_chinese_new_year_period,\n",
+    "                                              how = 'left',\n",
+    "                                              left_on = 'Date',\n",
+    "                                              right_on = 'Last Chinese New Year Date')\n",
+    "    df_last_new_year = df_last_new_year[~df_last_new_year['Last Chinese New Year Date'].isna()][['Chinese New Year Date', 'Category Code', 'Item Code', 'Sales']]\n",
+    "\n",
+    "    # Change column name before merge avoiding duplicated columns\n",
+    "    df_last_new_year.columns = ['Date', 'Category Code', 'Item Code', 'Last New Year Sales']\n",
+    "\n",
+    "    # Merge current new year with current new year to get \"Last New Year Sales\"\n",
+    "    df = df.merge(df_last_new_year,\n",
+    "                  on = ['Date', 'Category Code', 'Item Code'],\n",
+    "                  how = 'left')\n",
+    "\n",
     "df_chinese_new_year = get_chinese_new_year_dates(2020, 2024)\n",
     "df_chinese_new_year_period = get_chinese_new_year_period(df = df_chinese_new_year, days = 7)\n",
     "\n",
-    "display(df_chinese_new_year)\n",
     "display(df_chinese_new_year_period.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2023"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_temp = df_agg.copy()\n",
+    "start_year = dt.strptime(df_temp['Date'].min(), '%Y-%m-%d').year\n",
+    "end_year = dt.strptime(df_temp['Date'].max(), '%Y-%m-%d').year\n",
+    "end_year"
    ]
   },
   {
